--- a/index.html
+++ b/index.html
@@ -6,8 +6,16 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Banjo-Kazooie Romhacking</title>
     <link rel="stylesheet" href="style.css">
+    <script src="index.js"></script>
   </head>
   <body>
-    <script src="index.js"></script>
+    <nav>
+      <ul>
+        <li>Download</li>
+        <li>Mods</li>
+        <li>Discord</li>
+        <li>Learn</li>
+      </ul>
+    </nav>
   </body>
 </html>
