--- a/index.html
+++ b/index.html
@@ -11,11 +11,11 @@
   <body>
     <nav>
       <ul>
-        <li>Download</li>
-        <li>Mods</li>
-        <li>Discord</li>
+        <li>Tools</li>
         <li>Learn</li>
+        <li>Discord</li>
       </ul>
     </nav>
+    <form><input type="search"></form>
   </body>
 </html>
