--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Banjo-Kazooie Romhacking</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin="">
+    <link href="https://fonts.googleapis.com/css2?family=Comic+Neue:ital,wght@0,300;0,400;0,700;1,300;1,400;1,700&amp;display=swap" rel="stylesheet">
     <script src="index.js"></script>
   </head>
   <body>
@@ -14,6 +17,7 @@
       <ul>
         <li>Tools</li>
         <li>Learn</li>
+        <li>Affiliates</li>
         <li>Discord</li>
       </ul>
     </nav>
