--- a/index.html
+++ b/index.html
@@ -1,26 +1,38 @@
-<!DOCTYPE html>
-<html lang="en">
-  <head>
+<html lang="en"><head>
     <meta charset="UTF-8">
     <link rel="icon" type="image/x-icon" href="/images/Token.ico">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Banjo-Kazooie Romhacking</title>
     <link rel="stylesheet" href="style.css">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin="">
-    <link href="https://fonts.googleapis.com/css2?family=Comic+Neue:ital,wght@0,300;0,400;0,700;1,300;1,400;1,700&amp;display=swap" rel="stylesheet">
     <script src="index.js"></script>
   </head>
   <body>
     <nav>
+    <ul><img src="images/Hackpack.png" height="64px" style="border-radius: 50%;">
+    </ul>
       <ul>
-        <li>Tools</li>
-        <li>Learn</li>
-        <li>Affiliates</li>
+        <li>Mods</li>
+<li>Tools</li>
+        <li>Learn</li> <li>Affiliation</li>
         <li>Discord</li>
       </ul>
     </nav>
-    <form><input type="search"></form>
-  </body>
-</html>
+    <div id="searchbar"><form><input type="search" alt="Search for a mod..."></form></div>
+  
+
+<audio class="audio-output" style="display: none;"></audio><div id="volume-booster-visusalizer">
+                    <div class="sound">
+                        <div class="sound-icon"></div>
+                        <div class="sound-wave sound-wave_one"></div>
+                        <div class="sound-wave sound-wave_two"></div>
+                        <div class="sound-wave sound-wave_three"></div>
+                    </div>
+                    <div class="segments-box">
+                        <div data-range="1-20" class="segment"><span></span></div>
+                        <div data-range="21-40" class="segment"><span></span></div>
+                        <div data-range="41-60" class="segment"><span></span></div>
+                        <div data-range="61-80" class="segment"><span></span></div>
+                        <div data-range="81-100" class="segment"><span></span></div>
+                    </div>
+                </div></body></html>
