--- a/index.html
+++ b/index.html
@@ -18,21 +18,5 @@
         <li>Discord</li>
       </ul>
     </nav>
-    <div id="searchbar"><form><input type="search" alt="Search for a mod..."></form></div>
-  
-
-<audio class="audio-output" style="display: none;"></audio><div id="volume-booster-visusalizer">
-                    <div class="sound">
-                        <div class="sound-icon"></div>
-                        <div class="sound-wave sound-wave_one"></div>
-                        <div class="sound-wave sound-wave_two"></div>
-                        <div class="sound-wave sound-wave_three"></div>
-                    </div>
-                    <div class="segments-box">
-                        <div data-range="1-20" class="segment"><span></span></div>
-                        <div data-range="21-40" class="segment"><span></span></div>
-                        <div data-range="41-60" class="segment"><span></span></div>
-                        <div data-range="61-80" class="segment"><span></span></div>
-                        <div data-range="81-100" class="segment"><span></span></div>
-                    </div>
-                </div></body></html>
+    <div id="searchcontainer"><form><div class="formInputs"><label><input type="search" placeholder="Search for a mod..."></label></div><div class="formInputs"><label class="switch"><input type="checkbox"><span class="slider round"></span></label></div></form></div>
+</body></html>
