--- a/index.html
+++ b/index.html
@@ -9,14 +9,57 @@
   </head>
   <body>
     <nav>
-    <ul><img src="images/Hackpack.png" height="64px" style="border-radius: 50%;">
-    </ul>
-      <ul>
-        <li>Mods</li>
-<li>Tools</li>
-        <li>Learn</li> <li>Affiliation</li>
-        <li>Discord</li>
+        <ul>
+            <img src="images/Hackpack.png" height="64px" style="border-radius: 50%;">
+        </ul>
+      <ul>       
+        <li><a href="index.html">Mods</a></li>
+        <li><a href="tools.html">Tools</a></li>
+        <li><a href="learn.html">Learn</a></li>
+        <li><a href="home.html">Announcements</a></li>
+        <li><a href="affiliates.html">Affiliation</a></li>
+        <li><a href="https://discord.gg/Cm2JuQvewN">Discord</a></li>
       </ul>
     </nav>
-    <div id="searchcontainer"><form><div class="formInputs"><label><input type="search" placeholder="Search for a mod..."></label></div><div class="formInputs"><label class="switch"><input type="checkbox"><span class="slider round"></span></label></div></form></div>
+    <div id="searchcontainer">
+        <form>
+            <div class="formInputs">
+                <label>
+                    <input type="search" placeholder="Search for a mod...">
+                </label>
+            </div>
+            <div class="formInputs">
+                <label class="switch">
+                    <input type="checkbox">
+                    <span class="slider round">  
+                    </span>
+                </label>
+            </div>
+        </form>
+    </div>
+    <div id="tagscontainer">
+        <div id="tagtype"><p>Type:</p></div>
+        <div id="tagtheme"><p>Theme:</p></div>
+    </div>
+    <div class="modscontainer">
+    <div class="mods">
+        <img src="images/Hackpack.png">
+        <p>Banjo-Dreamie</p>
+    </div>
+    <div class="mods">
+        <img src="images/Hackpack.png">
+        <p>Banjo-Kazooie: The Legend of the Crystal Jiggy</p>
+    </div>
+    <div class="mods">
+        <img src="images/Hackpack.png">
+        <p>Banjo-Kazooie: The Corrupted Jiggys</p>
+    </div>
+    <div class="mods">
+        <img src="images/Hackpack.png">
+        <p>Banjo-Kazooie: The Hidden Lair</p>
+    </div>
+</div>
+    
+
+
 </body></html>
