--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
     </div>
     <div class="modscontainer">
     <div class="mods">
-        <img src="images/Hackpack.png">
+        <img src="https://drive.google.com/file/d/1WiIhVI5UkbBalfvi45gwvLr7TQfLCLxr/view?usp=drive_link">
         <p>Banjo-Dreamie</p>
     </div>
     <div class="mods">
