--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="style.css">
     <script src="index.js"></script>
   </head>
-  <body>
+<body>
     <nav>
         <ul>
             <img src="images/Hackpack.png" height="64px" style="border-radius: 50%;">
@@ -38,28 +38,34 @@
         </form>
     </div>
     <div id="tagscontainer">
-        <div id="tagtype"><p>Type:</p></div>
-        <div id="tagtheme"><p>Theme:</p></div>
+        <div id="tagtype">
+			<p>Type:</p>
+		</div>
+        <div id="tagtheme">
+			<p>Theme:</p>
+		</div>
     </div>
     <div class="modscontainer">
-    <div class="mods">
-        <img src="https://drive.google.com/file/d/1WiIhVI5UkbBalfvi45gwvLr7TQfLCLxr/view?usp=drive_link">
-        <p>Banjo-Dreamie</p>
-    </div>
-    <div class="mods">
-        <img src="images/Hackpack.png">
-        <p>Banjo-Kazooie: The Legend of the Crystal Jiggy</p>
-    </div>
-    <div class="mods">
-        <img src="images/Hackpack.png">
-        <p>Banjo-Kazooie: The Corrupted Jiggys</p>
-    </div>
-    <div class="mods">
-        <img src="images/Hackpack.png">
-        <p>Banjo-Kazooie: The Hidden Lair</p>
-    </div>
-</div>
-    
-
-
-</body></html>
+		<div class="mods">
+			<img src="https://lh3.googleusercontent.com/fife/ALs6j_HXz8BUsXP1zzlFLVZpqelXy-2GbHQ-j00b-5vMxdCqWhvtDa2CsoB00X81-af2BX_3jup3FmA6Plk41nV5BcCshP3INlizH9wRlK-GXaZPnkbW-L-38_RxpEHZF1iIvmZsbJ7I6xMA2IHes0bsSulA6t3vQ7TAdWcwjnjIuefK8BsvZ0NsbtG5ZRTr2uoUQuu7oukcCEpmcUJRPEHugNddYboC-CxQ2GpHGcYR6nubsFWx831GBD2yHAU2H2sV1t9nvAEL_khIoAW92JHdB9vi08BLpNeR0LzSXgM91fUu-Ed7KA1pLmY1eaVpz8ysTcFxhCHwt3PFGPNBs-U7cAi2HXCq-drVaKqHszxVAcouyOIIdkTt6nplrzEU0nlhE-sGafQqZ1d89Xylc5VEIeiPUH_Pv-TGhZnVcI42ujU00RosfavFnxk9NHB_AbzdVb05UEV_3daq0V-bqHHxDLMxH6thGuKsvY7B-1ZS4ItHvHeopUfVZwtYy7DWH2AtHHYBus22EILQpYy6UShNHR7ceMTk3jwN8WvX4NFblXsffjfQfyjiWXt9lC7W36EyIJLsbCtWXQfMniigRZR3V7hvp_d2UDBh2ha2_j1DakSuerwFsgyRzp9RvMPofbn9GQCyIUaFCoXCa7YM1n9TWZ42awp8KMUEWhMsKBSnJdX1FSIP8gZVygj5hzO_970Tx3GmHH9HBrtwHhFkz4wOFjXJPmie5YGNN-N1Pidcf-3vN9Q3Of7-WZU1S_A4DE4BxIV3nXDVy-2ddFz-Ly-mB0hdssFtOCWdIdV5rWE4QH8QWz0zXKhNcGrjVZ0NyTgswHZCjZBN1QZ3jJzZV6S0ILgm_Plpzr2iFRmkdyvuueybyGJaIM8dYUorE4YqUC2VtRsoMx9mUSPmrx5Xqhh10UyzQpr5kaoRykw_BMHQjrRJWV3-ofLRZBFlnNo4PXq6FcuzayszygH8iVc9WF_OPh70cgl2kmXkHXsUy9GvxDSplu8geil0toaU4BW190Qbs8EMfbVsisSMDehgYK8QJ8BLlGUam48bTUB-cH4nGE2Cy40yl84b3kYlbUtW_zxX3T6AckbTzfdbbDcgIJ5CWMct5X2csSVHUMknQg922vNAl8HOsw1RbUBiy3vxn_QUgW4K4Gk8AWYHOyVNEKFY7hn0_wcYvYjBgS9EIkPptsENmex_co0fhf0jBAEuGhEE0PkTK3MvEBF4mRSvNW2dHCmUKo2UBvHnqovYCL3HsbotYwtnDYjK5ZyNXcWdi5Q8oMfM-ixvTsNyCR_pcVmnDv3C8qL6Rq9W9Um_EvB8hemWs3wUTWAM9Bim6gQgz8ByOYJ1LLRvnRzU-7CIK_MJFEpysXxrZL8PwpfqpBuWz-wCziTYB16_Dx5tUNVYu9auenT1V43gHZZViv7z5D5IJpTxsqLLcqn237S3LG7xrYJMKtPwttMLDhpG9VnFWBAZKBn0voFLVrCI5M9Osnn-5vZBT4CpNOgjyqRAo8oJ__5LUORZmrTy59LYhCtdLh79XAyBzYm9NVLn3D9FHClip_3-4-xZqroAQFQCfgoQME8ipvlS1QtCHtKWU3KcrngQhKevLha5pnMrzZBa0df4KNmrnNL_4PoqwKeOJkYXEX8l2FtsURsm7Hkt-r-VOcg4ZTcSDYErSG2oHh9TiAJRmzQQTM_vILjZ8JBfRI3NnDhZ6PTmhOhSkoVyBJrB1Q=w1920-h826">
+			<p>Banjo-Dreamie</p>
+			<h5>Loggo</h5>
+		</div>
+		<div class="mods">
+			<img src="https://lh3.googleusercontent.com/fife/ALs6j_HFn_pITUlpzKv9vmEahJQavnJxMBlFYXBYNiY3NJg9s4RJrho6BAK1ZI-B4mMrvDU7Z87fnl-F2qTFRmExcySm2RAyKc2XpMcgzzfU2p-h5KH4TEUQuEx3nb3sj6ZQpH4TJCr5lYuB8RIZvlmWmSsJ2_9sHM9H23VYVp1CNxnA88Jc2ChSxsAwX0Bx6x5K4OqDEtswDmsLAIJM6wixbxHzOaihCI1njNiL2fEaWvjmoMSfS-Gav5-nE88LCN_BHsUcOeMB5hLKDLG5qYO_lkncuLJORfc8Bz889jwf7ILJHhRnmcErS9GrRfUrlv_QAjtmgVuts_fmEkM_BHaE43_EJTDpKATy6gW42bSDjPIKeWmMiLApqDU0YBLzIZnAloDSeHUHyR0mj6mD2sUluSEnNFyyFI-gws3XnYuoW6l09i9iJARDz6YkccER6bALY7aDGh2zVcVeNohLYw9ST_t7W7MvpVYmfHJaCLolhAQ6d4cdLoLCB4fiXViXGjML-30qjUCtjmKwG3z9reQvJ4tjxLJ4VFEbyQSe_HUSEzMgs6RCbEpg3iq62Jz4G8e6dPFIEQT46doGobi7D_sHduB2ShRNtRWtFqFSomBxdVMq9GzQxYxUYb7XlUFCLz5nqPyqi8rg44SAvlUtKp96qE9eMkaRT2NMEmeVB9zlfTHe1N7rhTi2Rbp5dg5_ZdrvtrcNji5ldplt8SKFwLZBJzqb0Bg4LaytKqQBynw0moHGfqCNqbWqnmLIP5rORvf-u2tSMfBEZs9TPjfVcIv16E7i8TxY0yvTVf34d0skuRz0w5V_v-XTFpDPimW3Jw3AEvPS7C7gs2sABFf5hXfuzlA4e6Lkpf5GhGSSP6jWnjpaXZcFf3Be3VX7ovAFSGbJBTnnap2BasQ5YWZDtKOOCR76ZtbsK7JbbcPLafDpxz9VzOqHOhRn9SiMYb7EO1h1gnHpTmIu3pJ_8UtImsTdbT2iEp52pzKQYYqPxpgMbQFvc6S2gqlY4qHHysIsKfR3H0btHSMRNqY5mJfyKrmxZEUjPDk8x41HvYfL3_rycTd3OHmnE9sjBOJlgkDyj2NLGj5OzXiMs07pfCSIqBQ2tmB-LNZjo2Zoq8R44J-40IGcCl3H9NSLyamIyl379qsLb8gXnQ5sHHPRuFzsotYNb3DuO0kczepW-GNHCVOffW7_1QF0C0v28D79ic_m8apCEJo_2Zr4c5xandy_MBFd4XHms6doJCO5-B4ySxM09jviOfhNaefsNdKS4F8Scu2oeoBD8vK3FT5gZ_0XMMx6-WDrPD9FRlXTO_elvh_keIA_yZsAzDHTfj-XwP8xpgdoFnQsYZN-D9gNAiLFRHVBsCgJtDPKUFRaXXtkjve8GHagizJYpXhfQS39TY-tGwk0f_5x9geebnVYS9Y6QMDDaWzSM2FjEa5-2TKTU41ykXsHpdZZtOvmrQFEz8PHH1AHoRNCTe9L_vjemuP6W05bY_aGD_6g-41enyYK1z_WsgZaFEt79trtq8C3Dd6Hc8k3R6gbxKpHKqHd1BbUYC5mMj0w19kyb91DOwZg09FOSv8UL9hhknGywD5Ri7ASg9CR249FrYIgc4e9Tw0eFFaPbcltUw5h6jGpu_Fwm9egykSpP_NS-m1E8ktsGeQjZepzbhs2O5XuBXHJDfSs932jhV9MsnaTNRDCoZlvylJi6xLIwTkSX8mragqtQ3kx=w1920-h826">
+			<p>Banjo-Kazooie: The Jiggies of Time</p>
+			<h5>Mark Kurko</h5>
+		</div>
+		<div class="mods">
+			<img src="https://lh3.google.com/u/3/d/1PTXCDp5MSz5JnolgDdpuGufLAMTBoYHL=w1920-h826-iv1">
+			<p>Banjo-Kazooie: The Corrupted Jiggys</p>
+			<h5>Sorra1</h5>
+		</div>
+		<div class="mods">
+			<img src="https://lh3.googleusercontent.com/fife/ALs6j_GngjV72mP9zDy8bPhkeMJYrvpdoZtORwU6Kw79xduuIws904ca60qKFqJSyGkPORVm_6BoMwRaWAJ7rZH6S5hf8pFapRwFkx-ImQNCjesiCGcKd5nFoeFSDt2jdAvkXiy9ICrR5PDMBEFtaDn-aeFC7t2tlRvF5xh--m6sgXjQwgyD1oI2gOv5m7WH409egjG119kY3GjoqJCKydivxb0yccvlfoCcJAeYpwr2IkqSV8hOJ67HKxZjEJFZ6rL0empC2CKIut4Q-Ms2pdjJBBuxUtBcBK6mJ_h-kG0vkT8I1vwGtAkVUUkrdoJXU2Q5jereUa08E33mNYeprxO3CgelvZuIFHvQpYIClbeGVfNP6IynOZVkHVK4xH-5_QR_zhZRGW3uGT9VyekQMKIBRTVRtajmNoy3rNFDl0Cg2p46ssox_Zr1MBlZ-Cm3i4csk9fFCug2TAU0YtPD_i5a1yOX7FFsnKkIQo5B7Jio0B3LwkPwHCiiAHEstZaM_RJL97n5mpv1F9pn52SZf_uU50H76Ls6FkByCBSXa8KIIrFpLmj9q6LAogMFrEY8lOltEtVltnwl-SEtOFGKybqbqmub8NaN73YwbNbuYZu3owzlddz8YlJD7INzlq-Y3lktqeVeR8nwRYLok5F1mrk-t_k8PbK50b-CxY8tCSo4bFxbrYCcsKhlLLCfXsA3lHyT8uAWA4dSem9ccVtVW90VjHVkyHJMQLQMSJrIbsTgPCtNIu7aUyyCq7hRGQb11qG0vFuxn_RS3Q0cWSS_fP9KqBrFnKX1Y3FYD4Slh7AzsyGfbSVVfkp4B_kgIzqDr5WPYqTQWISnysy47L9VEVKhyysJniqfbtYJUvTXTsaOUrTTagHaAtOIlc6nswyPq5-cZifvIemhFNcmO2kV52RPimb17BZHFhF4XBZemZ61uDXze9ApnfOnruu1FfViWbrUzKl8aa0Ys0tJnbyHAZslUv8jVu6M-0S0YHW22yajcXXTr_6p2t7WPX3tgA3VId8519Iw6ZWEoTX1Gy5KPQrIs81ep8Fr0kphYBlENFEK2c5hEfcr1o2ilzfkgJG3Lugj-X3IS2RNpfGQPDCGjtQJlR1t6M0MVcHBIGkos7OW-qlfnA2ONeSfHTMO_1RlZ_jGPpnK6bVxW5Uq2br1JTgY5r7geFE3wveCiFO116CoQin01PenOgceSZ8QYhJ_4JG_9HMdv5Pm1zj7hbDQ3HeQU3whoBqEzXZ-xB8YNc2kLUZbDv8gvTx_emZgxe3M_pvnfokkDzkyNkbRI_AjiYY56dXjP7TXcbKmj-skcIWU_IMtAIg5kFWCASJlSl0z5PiqIkdLxONp_eFa5xszp3n1I0pgt252dAYpKfjCt8BJSHlzotu6g8ZsA9OESxUeMt6nDCNVM2jf0komyM6ZrGdrHvaNGnV0oVlS8_REzOfutvjcCzwA6NmXrre0tcTshn_Q4MWN1jRdWm82jqVusoBaEexoRkMiHHXYY8qba6tNXn-ICxxSlFhSchFO0FJOgLghagVdL1qSuRabb8wtm6R4X_IpSdJps1yUJEanokhUd1GOSNoCaIg7qSWo-umflk1ZnL3O6X5Sb-9gg5rX5hE83QclU8jPAhN9s8mWl4cIRR3RP7EwZlIhPIVIXHyOh_LyolziKTE_RGiiP1_EGT6U624gGdihLnGKowCDoHz_NR2s0T1ZIqFEyYsX-I9lMw=w1920-h826">
+			<p>Banjo-Kazooie: The Curse of Cut-Throat Coast</p>
+			<h5>RetroNuva10, Bynine, Loggo, Atezian, BanjoFreak64</h5>
+		</div>
+	</div>
+</body>
+</html>
