--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
         <li><a href="index.html">Mods</a></li>
         <li><a href="tools.html">Tools</a></li>
         <li><a href="learn.html">Learn</a></li>
-        <li><a href="home.html">Announcements</a></li>
-        <li><a href="affiliates.html">Affiliation</a></li>
+        <li><a href="announcements.html">Announcements</a></li>
+        <li><a href="affiliation.html">Affiliation</a></li>
         <li><a href="https://discord.gg/Cm2JuQvewN">Discord</a></li>
       </ul>
     </nav>
