--- a/affiliates.html
+++ b/affiliates.html
@@ -22,30 +22,6 @@
       </ul>
     </nav>
     <div id="searchcontainer">
-        <form>
-            <div class="formInputs">
-                <label>
-                    <input type="search" placeholder="Search for a mod...">
-                </label>
-            </div>
-            <div class="formInputs">
-                <label class="switch">
-                    <input type="checkbox">
-                    <span class="slider round">  
-                    </span>
-                </label>
-            </div>
-        </form>
-    </div>
-    <div id="tagscontainer">
-        <div id="tagtype"><p>Type:</p></div>
-        <div id="tagtheme"><p>Theme:</p></div>
-    </div>
-    <div id="modscontainer">
-        
-        <div class="mods">Dog</div>
-        <div class="mods">Dog</div>
-        <div class="mods">Dog</div>
-        <div class="mods">Dog</div>
+        <h1>Nothing yet. Check back soon!</h1>
     </div>
 </body></html>
